force-app/main/default/objects/vlocity_ins__ClaimPayment__c/fields/vlocity_ins__AccountId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payee Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>ClaimPayments</relationshipName>
    <type>Lookup</type>
</CustomField>