force-app/main/default/objects/vlocity_ins__ClaimPayment__c/fields/vlocity_ins__ContactId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payee Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Claim Payments</relationshipLabel>
    <relationshipName>ClaimPayments</relationshipName>
    <type>Lookup</type>
</CustomField>