force-app/main/default/objects/vlocity_ins__ClaimPayment__c/fields/vlocity_ins__PaymentDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__PaymentDate__c</fullName>
    <label>Payment Date</label>
    <type>Date</type>
</CustomField>